fix overflow

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -10,8 +10,14 @@
     box-sizing: border-box;
   }
 
+html, body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 body {
-    max-width: 100vw;
     height: 100vh;
     overflow-x: hidden;
     background: #F8F9FB 0% 0% no-repeat padding-box;
